# src/handlers/search.go
@@ -7,20 +7,20 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// Search is a handler for echo that gets the series metadata based off the name and user's filters.
-// @Summary Gets a series based off the user's query parameters.
-// @Description Get series metadata by nsfw (boolean), game (boolean), western (boolean), limit (1-20), name (string). You must use name to get a result back.
+// Search is a handler for echo that gets all of the metadata based off the name and user's filters.
+// @Summary Gets a "search" based off the user's query parameters.
+// @Description Search all resources by name (string), nsfw (boolean), game (boolean), western (boolean), limit (1-5), name (string). You must use name to get a result back.
 // @Produce json
 // @Param name query string true "name to search"
-// @Param limit query int false "limit 1-20; Default 1"
-// @Param nsfw query boolean false "whether the series is nsfw or not"
-// @Param western query boolean false "whether the series is western (Cartoon) or not (Anime)"
-// @Param game query boolean false "whether the series is from a game or not"
-// @Success 200 {array} series.Series
+// @Param limit query int false "limit 1-5; Default 5"
+// @Param nsfw query boolean false "whether the search is nsfw or not"
+// @Param western query boolean false "whether the search is western (Cartoon) or not (Anime)"
+// @Param game query boolean false "whether the search is from a game or not"
+// @Success 200 {array} search.Search
 // @Failure 400 {object} httputil.HTTPError "Must have a valid name query parameter"
-// @Failure 500 {object} httputil.HTTPError "An unexpected error has occurred when retrieving the series"
-// @Router /series [get]
-// @Tags Series
+// @Failure 500 {object} httputil.HTTPError "An unexpected error has occurred when searching"
+// @Router /search [get]
+// @Tags Search
 func Search(c echo.Context) (err error) {
 	initLimit := c.QueryParam("limit")
 	nsfw := c.QueryParam("nsfw")
@@ -28,7 +28,7 @@ func Search(c echo.Context) (err error) {
 	game := c.QueryParam("game")
 	name := c.QueryParam("name")
 
-	limit := helpers.MaxLimit(initLimit, 1, 20)
+	limit := helpers.MaxLimit(initLimit, 5, 5)
 	isNSFW := helpers.DefaultBoolean(nsfw)
 	isWestern := helpers.DefaultBoolean(western)
 	isGame := helpers.DefaultBoolean(game)
@@ -40,7 +40,7 @@ func Search(c echo.Context) (err error) {
 	json := search.GetResults(name, limit, isNSFW, isWestern, isGame)
 
 	if json == "" {
-		return &echo.HTTPError{Code: 500, Message: "An unexpected error has occurred when retrieving the series"}
+		return &echo.HTTPError{Code: 500, Message: "An unexpected error has occurred when searching"}
 	}
 
 	c.Response().Header().Set("Content-Type", "application/json")
